<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/item_imagem"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity=""
        android:contentDescription="@string/characters"
        android:src="@mipmap/ic_launcher"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_item_busca_nome"
            android:layout_below="@+id/item_imagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nome_busca"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tipo_busca"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>